--- a/playbook.yml
+++ b/playbook.yml
@@ -33,4 +33,11 @@
       src: conf/index.html
       dest: /var/www/html
 
+  - name: ensure apache service is start
+    service:
+      name: apache2
+      state: started
+      enabled: yes
+      
+
   
