--- a/playbook.yml
+++ b/playbook.yml
@@ -12,32 +12,11 @@
     #       - nodejs
     #       - npm
     #     update_cache: yes
-  # - name: file configuration copy
-  #   copy: 
-  #     src: conf/
-  #     dest:  /
-  - name: install apache2
-    apt: 
-      name: 
-        - apache2
-      update_cache: yes
-
-  - name: Give writable mode to http folder
-    file: 
-      path: /var/www/html
-      state: directory
-      mode: '0755'
-    
-  - name: file confuguration copy
+  - name: file configuration copy
     copy: 
-      src: conf/index.html
-      dest: /var/www/html
+      src: conf/
+      dest:  /
 
-  - name: ensure apache service is start
-    service:
-      name: apache2
-      state: started
-      enabled: yes
       
 
   
