--- a/exercice2/playbook.yml
+++ b/exercice2/playbook.yml
@@ -14,7 +14,7 @@
       update_cache: yes
   
   # Ajouter la clé gpg pour la sécurité des échanges avec le serveur des packages docker
-  - name : ajout de la cle gpg
+  - name: ajout de la cle gpg
     apt-key:
       url: https://download.docker.com/linux/debian/gpg
   
@@ -30,3 +30,10 @@
         - docker-ce
         - docker-ce-cli
         - containerd.io
+  
+  # démarrage du service
+  - name: start docker service
+    service:
+      name: docker start
+      state: started
+      enabled: true
