--- a/exercice2/playbook.yml
+++ b/exercice2/playbook.yml
@@ -16,11 +16,13 @@
     - name: ajout de la cle gpg
       apt_key:
         url: https://download.docker.com/linux/debian/gpg
+        state: present
 
     # ajouter le repos pour chercher les packages de docker
     - name: Ajout de l'adresse du repos pour les packages docker de debian
       apt_repository:
-        repo: deb https://download.docker.com/linux/debian bionic stable
+        repo: deb [arch=amd64] https://download.docker.com/linux/debian stretch stable
+        state: present
 
     # installation des composants docker
     - name: install docker components
@@ -29,11 +31,14 @@
           - docker-ce
           - docker-ce-cli
           - containerd.io
+        update_cache: yes
 
     # démarrage du service
     - name: start docker service
       service:
         name: docker start
         state: started
+        enabled: yes
+ed
         enabled: yes
 
