--- a/exercice2/playbook-image.yml
+++ b/exercice2/playbook-image.yml
@@ -20,11 +20,11 @@
         - worker
         - result
     - name: build image
-      docker_image:
-        name: image-{{item}}
-        build:
-          path: /{{item}}
-          source: build
+      # docker_image:
+      #   name: image-{{item}}
+      #   path: /{{item}}
+      #   # source: build
+      command : docker build -t {{item}} /{{item}}/.
       loop:
         - vote
         - worker
