--- a/exercice2/playbook.yml
+++ b/exercice2/playbook.yml
@@ -28,6 +28,7 @@
       apt_key:
         url: https://download.docker.com/linux/debian/gpg
         state: present
+      when: ansible_facts['os_family'] == 'Debian'
 
     # ajouter le repos pour chercher les packages de docker
     - name: Ajout de l'adresse du repos pour les packages docker de debian
@@ -55,4 +56,5 @@
         name: docker
         state: started
         enabled: yes
+
 
